add build in pom-2

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
     </modules>
 
     <build>
+        <finalName>project</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
