--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <mysql.version>5.1.39</mysql.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compile.plugin.version>3.1</maven.compile.plugin.version>
         <javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
         <commons.dbcp2.version>2.1.1</commons.dbcp2.version>
         <log4j.version>1.2.17</log4j.version>
@@ -29,6 +30,7 @@
         <com.pvt.entities.version>1.0</com.pvt.entities.version>
         <com.pvt.web.version>1.0</com.pvt.web.version>
         <com.pvt.hotelOrder.version>1.0</com.pvt.hotelOrder.version>
+
     </properties>
 
     <dependencies>
@@ -83,16 +85,26 @@
     </modules>
 
     <build>
-        <finalName>project</finalName>
+        <finalName>com.pvt.hotelOrder</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven.compile.plugin.version}</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.tomcat.maven</groupId>
                 <artifactId>tomcat7-maven-plugin</artifactId>
                 <version>2.2</version>
                 <configuration>
                     <url>http://localhost:8080/manager/text</url>
-                    <server>TomcatServer</server>
-                    <path>/${project.build.finalName}</path>
+                    <username>tomcat</username>
+                    <password>tomcat</password>
+                    <path>${project.build.finalName}</path>
                 </configuration>
                 <executions>
                     <execution>
