--- a/web/pom.xml
+++ b/web/pom.xml
@@ -15,7 +15,7 @@
     <version>${com.pvt.web.version}</version>
     <packaging>war</packaging>
 
-    <name>web Maven Webapp</name>
+    <name>web</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
