--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -47,6 +47,16 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>${commons.dbcp2.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
