--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <com.pvt.entities.version>1.0</com.pvt.entities.version>
         <com.pvt.web.version>1.0</com.pvt.web.version>
         <com.pvt.hotelOrder.version>1.0</com.pvt.hotelOrder.version>
+        <hibernate.version>4.3.11.Final</hibernate.version>
 
     </properties>
 
@@ -74,6 +75,16 @@
             <groupId>org.apache.tomcat</groupId>
             <artifactId>catalina</artifactId>
             <version>${org.apache.tomcat.catalina}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate.version}</version>
         </dependency>
     </dependencies>
 
