--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <com.pvt.web.version>1.0</com.pvt.web.version>
         <com.pvt.hotelOrder.version>1.0</com.pvt.hotelOrder.version>
         <hibernate.version>4.3.11.Final</hibernate.version>
+        <lombok.version>1.16.12</lombok.version>
 
     </properties>
 
@@ -85,6 +86,11 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
 
