--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compile.plugin.version>3.1</maven.compile.plugin.version>
         <javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
-        <commons.dbcp2.version>2.1.1</commons.dbcp2.version>
         <log4j.version>1.2.17</log4j.version>
         <cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
         <junit.version>4.11</junit.version>
@@ -32,6 +31,7 @@
         <com.pvt.hotelOrder.version>1.0</com.pvt.hotelOrder.version>
         <hibernate.version>4.3.11.Final</hibernate.version>
         <lombok.version>1.16.12</lombok.version>
+        <ehcache.version>2.6.11</ehcache.version>
 
     </properties>
 
@@ -58,11 +58,6 @@
             <version>${javax.servlet.jstl.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-dbcp2</artifactId>
-            <version>${commons.dbcp2.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>cobertura-maven-plugin</artifactId>
             <version>${cobertura-maven-plugin.version}</version>
@@ -86,6 +81,22 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
             <version>${hibernate.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+            <version>${hibernate.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>net.sf.ehcache</groupId>
+                    <artifactId>ehcache-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+            <version>${ehcache.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
