--- a/dao/src/main/resources/hibernate.database.properties
+++ b/dao/src/main/resources/hibernate.database.properties
@@ -6,3 +6,4 @@ hibernate.dialect=org.hibernate.dialect.MySQLDialect
 hibernate.connection.pool_size=10
 hibernate.show.sql=false
 hibernate.hbm2ddl.auto=update
+hibernate.cache.use_second_level_cache=false
