Daos changed. Save before Spring injection

--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -82,6 +82,11 @@
             <artifactId>annotations</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.9</version>
+        </dependency>
     </dependencies>
 
 </project>
