--- a/entities/pom.xml
+++ b/entities/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>spring-security-core</artifactId>
             <version>4.1.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
 
