--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <jackson.version>2.8.4</jackson.version>
         <xml.apis.version>1.4.01</xml.apis.version>
         <org.apache.poi.version>3.9</org.apache.poi.version>
+        <javax.validation.version>1.1.0.Final</javax.validation.version>
     </properties>
 
     <repositories>
@@ -269,6 +270,12 @@
             <artifactId>xml-apis</artifactId>
             <version>${xml.apis.version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>${javax.validation.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.apache.poi</groupId>
