--- a/web/pom.xml
+++ b/web/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>dao</artifactId>
             <version>${com.pvtoc.dao.version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>1.1.0.Final</version>
+        </dependency>
 
 
     </dependencies>
